[package]
name = "iso_27145"
version = "0.0.1"
authors = ["Samuel Preston <samp.reston@outlook.com>"]
edition = "2021"
description = "Implementation of ISO-27145"
readme = "README.md"
repository = "https://github.com/samp-reston/iso_27145"
license = "MIT"
keywords = ["iso", "OBD", "automotive", "27145", "networking"]
categories = [
  "data-structures",
  "development-tools",
  "embedded",
  "network-programming",
  "parsing",
]


[dependencies]
